--- a/src/i18n/locales/pt.json
+++ b/src/i18n/locales/pt.json
@@ -1,6 +1,6 @@
 {
   "cli": {
-    "description": "CLI para facilitar o uso do Git com linguagem natural",
+    "description": "CLI para facilitar o uso do Git com linguagem natural (Git Quick Quick)",
     "version": "1.0.0"
   },
   "commands": {
