--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -1,7 +1,12 @@
 {
   "cli": {
     "description": "CLI para facilitar el uso de Git con lenguaje natural (Git Quick Quick)",
-    "version": "1.0.0"
+    "version": "1.0.0",
+    "unknownCommand": "Comando no encontrado en GitQQ: %s",
+    "redirectingToGit": "Redirigiendo al comando Git nativo...",
+    "gitCommandFailed": "El comando Git falló con código de salida: %s",
+    "gitExecutionError": "Error al ejecutar el comando Git:",
+    "gitCommandSuccess": "✅ Comando Git completado con éxito."
   },
   "commands": {
     "commit": {
